# MARBLE

./: .env.example  .gitignore  LICENSE.txt  README.md  langgraph.json  pyproject.toml
agent_workflow/: __init__.py  iteration_nodes.py  logger.py  main_graph_builder.py  mcp_connection_manager.py  state.py  utils.py
agent_workflow/evolving_memory/: __init__.py  analyzer.py  baselines.py  evolving_memory.py  schemas.py
agent_workflow/routing_logic/: __init__.py  base_agent_node.py  entry_router.py
agent_workflow/workflow_subgraphs/: __init__.py
agent_workflow/workflow_subgraphs/analysis_workflow/: __init__.py  graph.py
agent_workflow/workflow_subgraphs/build_debate_workflow/: __init__.py  graph.py
agent_workflow/workflow_subgraphs/build_development_workflow/: __init__.py  graph.py
agent_workflow/workflow_subgraphs/docker_execution/: __init__.py  (+1 more)
configs/: __init__.py  config.py  mcp.json
docker_images/: build.sh
docker_images/deepdr/: Dockerfile  config.yaml  requirements.txt
docker_images/deepst/: Dockerfile  config.yaml  requirements.txt  run_deepst.ipynb
docker_images/deeptta/: Dockerfile  config.yaml  requirements.txt
docker_images/dlm-dti/: Dockerfile  config.yaml  requirements.txt
docker_images/hyperattentiondti/: Dockerfile  README.md  config.yaml  requirements.txt
docker_images/stagate/: Dockerfile  config.yaml  requirements.txt
docs/: index.html  report.html
infrastructure/: __init__.py
infrastructure/container_management_scripts/: build-mcp-images.sh  start-mcp.sh  stop-mcp.sh
infrastructure/download_pdf/: download_papers.py
(+136 files in other folders)
