[project]
name = "MARBLE"
version = "0.1.0"
description = "Multi-Agent Research for Bioinformatics Learning and Enhancement"
authors = [
    { name = "MARBLE Team" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
runtime = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.4.8",
    "pymupdf>=1.26.1",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",

    # PMC/PubMed paper search
    "pymed>=0.8.9",

    # OpenReview paper search (ICLR, NeurIPS, ICML)
    "openreview-py>=1.40.0",

    # Embedding-based paper scoring
    "sentence-transformers>=2.2.0",

    # ODR (Open Deep Research) Integration
    "tavily-python>=0.5.0",
    "langchain-tavily",
    "arxiv>=2.1.3",
    "duckduckgo-search>=3.0.0",
    "exa-py>=1.8.8",
    "xmltodict>=0.14.2",
    "beautifulsoup4==4.13.3",
    "markdownify>=0.11.6",
    "rich>=13.0.0",
    "FlagEmbedding",
    "langgraph-cli[inmem]"
]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_workflow*"]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]